--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.javax.activation.jar=lib/javax.activation.jar
+file.reference.javax.mail-1.6.2.jar=lib/javax.mail-1.6.2.jar
 file.reference.jbcrypt-0.4__1_.jar=lib/jbcrypt-0.4 (1).jar
 file.reference.local_policy.jar=lib/local_policy.jar
-file.reference.mail-1.4.7.jar=lib/mail-1.4.7.jar
 file.reference.postgresql-42.2.29.jre7.jar=lib/postgresql-42.2.29.jre7.jar
 file.reference.smtp-1.6.2.jar=lib/smtp-1.6.2.jar
 file.reference.US_export_policy.jar=lib/US_export_policy.jar
@@ -44,13 +44,13 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.29.jre7.jar}:\
-    ${file.reference.jbcrypt-0.4__1_.jar}:\
-    ${file.reference.mail-1.4.7.jar}:\
-    ${file.reference.smtp-1.6.2.jar}:\
-    ${file.reference.javax.activation.jar}:\
     ${file.reference.US_export_policy.jar}:\
-    ${file.reference.local_policy.jar}
+    ${file.reference.local_policy.jar}:\
+    ${file.reference.javax.activation.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.smtp-1.6.2.jar}:\
+    ${file.reference.postgresql-42.2.29.jre7.jar}:\
+    ${file.reference.jbcrypt-0.4__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
